test/spec_vectors/i32/fail/module_2.wat
(module (func $type-unary-operand-empty-in-block (i32.const 0) (block (i32.eqz) (drop))))